--- a/estilo/inicio.css
+++ b/estilo/inicio.css
@@ -64,6 +64,7 @@ aside li {
     border-top: 1px solid black;
     padding-top: 5px;
     padding-bottom: 5px;
+    margin-left: 5px;
 }
 
 aside ul li a:hover {
