--- a/estilo/noticias.css
+++ b/estilo/noticias.css
@@ -71,4 +71,13 @@
             .Noticia {
                 margin-right: 0px;
             }
+
+            a {
+                text-decoration: none;
+                color: black;
+            }
+
+            a:hover {
+                color: black;
+            }
         }
